--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,28 +1,84 @@
 ---
-const pathname = new URL(Astro.request.url).pathname;
-const currentPath = pathname.slice(1); // remove the first "/"
 ---
-<header x-data="{ showmenu: false }" class="" >
-    <div id="navbar" class="container mx-auto p-4 flex flex-row justify-between items-center">
-        <div id="logo" class="">
-            <a href="#" class="font-display text-4xl">Astro-Tailwind starter - udvidet udgave E25</a>
-        </div>
-        <nav id="desktopmenu" class="hidden lg:block">
-            <ul class="flex flex-row gap-4">
-                <li class=""><a href="/" class={currentPath === "" ? "italic font-bold" : "italic"}>Forside</a></li><!-- alternativt: lav et <a href="">Link</a>, hvis du ikke vil bruge Link.astro komponenten -->
-                <li class=""><a href="/komponentbibliotek/" class={currentPath === "komponentbibliotek/" ? "italic font-bold" : "italic"}>Komponentbibliotek</a></li>
-            </ul>
-        </nav>
-        <button id="burgermenu" class="lg:hidden" x-on:click="showmenu = ! showmenu"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-</svg>
+<!-- Navigation -->
+<div 
+  x-data="{ open: false }" 
+  class="relative"
+>
+<!-- Logo (top-left, always visible) -->
+<a href="/" class="fixed top-4 left-4 z-50">
+  <img src="/src/assets/logo.svg" alt="Logo" class="h-8 md:h-10 w-auto" />
+</a>
+
+  <!-- Desktop Menu (right side, separate buttons) -->
+<nav class="hidden lg:flex flex-col gap-35 fixed right-4 top-1/8 items-center z-50"
+     style="font-family: 'Bowlby One SC', sans-serif;">
+  <a href="#im_in" 
+     class="bg-[#E9F422] text-black px-4 py-2 rounded-full font-bold rotate-90 
+            hover:bg-gray-800 hover:text-[#E9F422] transition-colors duration-300">
+    I'm in
+  </a>
+  <a href="/why" 
+     class="bg-[#E9F422] text-black px-4 py-2 rounded-full font-bold rotate-90 
+            hover:bg-gray-800 hover:text-[#E9F422] transition-colors duration-300">
+    Why instants
+  </a>
+  <a href="/winners" 
+     class="bg-[#E9F422] text-black px-4 py-2 rounded-full font-bold rotate-90 
+            hover:bg-gray-800 hover:text-[#E9F422] transition-colors duration-300">
+    Winners
+  </a>
+  <a href="/about" 
+     class="bg-[#E9F422] text-black px-4 py-2 rounded-full font-bold rotate-90 
+            hover:bg-gray-800 hover:text-[#E9F422] transition-colors duration-300">
+    About
+  </a>
+</nav>
+
+
+  <!-- Mobile Burger Button -->
+  <button 
+  @click="open = true" 
+  x-show="!open"
+    class="lg:hidden fixed top-4 right-4 z-50">
+  <img src="/src/assets/burgermenu.svg" alt="burgermenu" class="h-8 w-8" />
 </button>
-    </div>
-    <nav id="mobilmenu" class="flex flex-col content-center" 
-    x-show="showmenu" x-transition x-on:click="showmenu = false" x-on:click.outside="showmenu = false">
-        <ul class="border-t-2 border-b-2 border-black">
-            <li class="text-center py-2"><a href="/" class={currentPath === "" ? "italic font-bold" : "italic"}>Forside</a></li>
-            <li class="text-center py-2"><a href="/komponentbibliotek/" class={currentPath === "komponentbibliotek/" ? "italic font-bold" : "italic"}>Komponentbibliotek</a></li>
-        </ul>
+
+  <!-- Mobile Slide-out Menu -->
+  <div 
+    class="fixed top-0 right-0 h-full w-64 bg-[#E9F422] transform transition-transform duration-300 ease-in-out shadow-xl z-40 lg:hidden"
+    :class="open ? 'translate-x-0' : 'translate-x-full'"
+    style="font-family: 'Bowlby One SC', sans-serif;"
+  >
+  <!-- Close button -->
+<button 
+  @click="open = false"
+  class="absolute top-4 right-4 z-50"
+>
+  <img src="/src/assets/back_burgermenu.svg" alt="closemenu" class="h-8 w-8" />
+</button>
+<nav class="flex flex-col items-start gap-6 p-8 text-black text-lg mt-12">
+      <a href="/im-in" @click="open = false" class="group flex flex-col items-start">
+  I'm in
+  <img src="/src/assets/hover.svg" alt="hover" 
+       class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
+</a>
+      <a href="/why-instants" @click="open = false" class="group flex flex-col items-start">Why instants 
+      <img src="/src/assets/hover.svg" alt="hover" 
+       class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
+      </a>
+
+
+      <a href="/winners" @click="open = false" class="group flex flex-col items-start">Winners
+        <img src="/src/assets/hover.svg" alt="hover" 
+       class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
+      </a>
+
+
+      <a href="/about" @click="open = false" class="group flex flex-col items-start">About
+      <img src="/src/assets/hover.svg" alt="hover" 
+       class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
+      </a>
     </nav>
-</header>
+  </div>
+</div>
