--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,19 @@ import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
 ---
 <MainLayout title="Titel">
-	<main class="container mx-auto p-4">
-		<Heading htmlheading="h1">Lav noget flot!</Heading>
-        <Text teksttype="brødtekst">Så bliver Anders glad:-)</Text>
-	</main>
+  <!-- Hero Section -->
+  <section 
+    class="relative w-full h-[70vh] md:h-screen bg-cover bg-center flex flex-col items-center justify-center"
+    style="background-image: url('/src/assets/hero_img.png');"
+  >
+    <div class="container mx-auto text-center px-4">
+      <Heading htmlheading="h1"></Heading>
+      <Text teksttype="brødtekst"></Text>
+    </div>
+  </section>
+
+  <!-- Rest of page -->
+  <main class="container mx-auto p-4">
+    <!-- other content -->
+  </main>
 </MainLayout>
