--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Button from "../components/Button.astro";
   <!-- Hero Section -->
   <section 
     class="relative w-full h-[70vh] md:h-screen bg-cover bg-center flex flex-col items-center justify-center"
-    style="background-image: url('/src/assets/hero_img.png');"
+    style="background-image: url('/images/hero_img.png');"
   >
     <div class="container mx-auto text-center px-4">
       <Heading htmlheading="h1"></Heading>
