--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
 >
 <!-- Logo (top-left, always visible) -->
 <a href="/" class="fixed top-4 left-4 z-50">
-  <img src="/src/assets/logo.svg" alt="Logo" class="h-8 md:h-10 w-auto" />
+  <img src="/images/logo.svg" alt="Logo" class="h-8 md:h-10 w-auto" />
 </a>
 
   <!-- Desktop Menu (right side, separate buttons) -->
