--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,7 +41,7 @@
   @click="open = true" 
   x-show="!open"
     class="lg:hidden fixed top-4 right-4 z-50">
-  <img src="/src/assets/burgermenu.svg" alt="burgermenu" class="h-8 w-8" />
+  <img src="/images/burgermenu.svg" alt="burgermenu" class="h-8 w-8" />
 </button>
 
   <!-- Mobile Slide-out Menu -->
@@ -55,28 +55,28 @@
   @click="open = false"
   class="absolute top-4 right-4 z-50"
 >
-  <img src="/src/assets/back_burgermenu.svg" alt="closemenu" class="h-8 w-8" />
+  <img src="/images/back_burgermenu.svg" alt="closemenu" class="h-8 w-8" />
 </button>
 <nav class="flex flex-col items-start gap-6 p-8 text-black text-lg mt-12">
       <a href="/im-in" @click="open = false" class="group flex flex-col items-start">
   I'm in
-  <img src="/src/assets/hover.svg" alt="hover" 
+  <img src="/images/hover.svg" alt="hover" 
        class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
 </a>
       <a href="/why-instants" @click="open = false" class="group flex flex-col items-start">Why instants 
-      <img src="/src/assets/hover.svg" alt="hover" 
+      <img src="/images/hover.svg" alt="hover" 
        class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
       </a>
 
 
       <a href="/winners" @click="open = false" class="group flex flex-col items-start">Winners
-        <img src="/src/assets/hover.svg" alt="hover" 
+        <img src="/images/hover.svg" alt="hover" 
        class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
       </a>
 
 
       <a href="/about" @click="open = false" class="group flex flex-col items-start">About
-      <img src="/src/assets/hover.svg" alt="hover" 
+      <img src="/images/hover.svg" alt="hover" 
        class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
       </a>
     </nav>
