--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,6 +13,10 @@ const { title } = Astro.props;
 		<title>{Astro.props.title}</title>
 		<!-- font -->
 		<link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Over+the+Rainbow&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://use.typekit.net/nlg8xoh.css">
 
 		<script defer src="https://unpkg.com/tailwindcss-intersect@2.x.x/dist/observer.min.js"></script>
 	</head>
