--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,15 @@ import Button from "../components/Button.astro";
     class="relative w-full h-[70vh] md:h-screen bg-cover bg-center flex flex-col items-center justify-center"
     style="background-image: url('/images/hero_img.png');"
   >
+  <div class="font-display text-(---color)">Her er en test</div>
     <div class="container mx-auto text-center px-4">
-      <Heading htmlheading="h1"></Heading>
       <Text teksttype="brødtekst"></Text>
     </div>
   </section>
+    </section>
+  <Text class="h2">What is Instant Day?</Text>
+
+</section>
 
   <!-- Rest of page -->
   <main class="container mx-auto p-4">
