header/footer done

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,24 @@
 ---
 ---
-<footer class="bg-primary-500 text-white">
-    
+<footer class="relative w-full bg-cover bg-center py-10"
+    style="background-image: url('/images/hero_img.png');">
+    <!-- a elementer -->
+   <section  class="flex flex-wrap justify-center gap-x-8 lg:gap-x-12">
+<a href="/" class="text-[#2D2C2C] lg:text-4xl" style="font-family: 'Bowlby One SC', sans-serif;">I'm in</a>
+<a href="/why" class="text-[#2D2C2C] lg:text-4xl" style="font-family: 'Bowlby One SC', sans-serif;">Why instants</a>
+<a href="/winners" class="text-[#2D2C2C] lg:text-4xl" style="font-family: 'Bowlby One SC', sans-serif;">Winners</a>
+<a href="/about" class="text-[#2D2C2C] lg:text-4xl" style="font-family: 'Bowlby One SC', sans-serif;">About</a>
+<a href="/" class="text-[#2D2C2C] lg:text-4xl " style="font-family: 'Bowlby One SC', sans-serif;">Terms & conditions</a>
+</section> 
+
+<div class="text-center mt-10 px-2 lg:mt-20 lg:px-20">
+    <p class="text-[#E9F422] lg:text-4xl mb-4 lg:mb-10" style=" font-family: 'La Belle Aurore', cursive;">Let's celebrate</p> 
+    <p class="text-[#2D2C2C] lg:text-4xl" style="font-family: 'Bowlby One SC', sans-serif;">October 18 is Instant Day - a day all about celebrating instant photography</p>
+</div>
+
+<!-- logo -->
+ <div class="flex justify-center mt-10">
+    <a href="/"><img src="/images/logo.svg" alt="logo" class="h-10 lg:h-16 w-auto"></a>
+ </div>
+
 </footer>
