--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,7 @@
   x-data="{ open: false }" 
   class="relative"
 >
+
 <!-- Logo (top-left, always visible) -->
 <a href="/" class="fixed top-4 left-4 z-50">
   <img src="/images/logo.svg" alt="Logo" class="h-8 md:h-10 w-auto" />
@@ -50,6 +51,7 @@
     :class="open ? 'translate-x-0' : 'translate-x-full'"
     style="font-family: 'Bowlby One SC', sans-serif;"
   >
+
   <!-- Close button -->
 <button 
   @click="open = false"
@@ -57,28 +59,52 @@
 >
   <img src="/images/back_burgermenu.svg" alt="closemenu" class="h-8 w-8" />
 </button>
+
+<!-- a elementer men hover effekt -->
 <nav class="flex flex-col items-start gap-6 p-8 text-black text-lg mt-12">
-      <a href="/im-in" @click="open = false" class="group flex flex-col items-start">
-  I'm in
-  <img src="/images/hover.svg" alt="hover" 
-       class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
+      <a
+  href="/"
+  @click="open = false"
+  class="group flex flex-col items-center"
+>
+  <span
+    class="rounded-full border-2 border-[#2D2C2C]
+           bg-[#F7F709] text-[#2D2C2C] py-2 px-4
+           transition-colors duration-300
+           group-hover:bg-[#2D2C2C] group-hover:text-[#F7F709] group-hover:border-[#F7F709]">I'm in
+  </span>
 </a>
-      <a href="/why-instants" @click="open = false" class="group flex flex-col items-start">Why instants 
-      <img src="/images/hover.svg" alt="hover" 
-       class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
+
+
+
+      <a href="/why" @click="open = false" class="group flex flex-col items-start">
+       <span
+    class="rounded-full border-2 border-[#2D2C2C]
+           bg-[#F7F709] text-[#2D2C2C] py-2 px-4
+           transition-colors duration-300
+           group-hover:bg-[#2D2C2C] group-hover:text-[#F7F709] group-hover:border-[#F7F709]">Why instants
+  </span> 
       </a>
 
 
-      <a href="/winners" @click="open = false" class="group flex flex-col items-start">Winners
-        <img src="/images/hover.svg" alt="hover" 
-       class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
-      </a>
+      <a href="/winners" @click="open = false" class="group flex flex-col items-start">
+            <span
+    class="rounded-full border-2 border-[#2D2C2C]
+           bg-[#F7F709] text-[#2D2C2C] py-2 px-4
+           transition-colors duration-300
+           group-hover:bg-[#2D2C2C] group-hover:text-[#F7F709] group-hover:border-[#F7F709]">Winners
+  </span> 
+</a>
 
-
-      <a href="/about" @click="open = false" class="group flex flex-col items-start">About
-      <img src="/images/hover.svg" alt="hover" 
-       class="w-full h-auto opacity-0 group-hover:opacity-100 transition" />
-      </a>
+<a href="/about" @click="open = false" class="group flex flex-col items-start">
+   <span
+    class="rounded-full border-2 border-[#2D2C2C]
+           bg-[#F7F709] text-[#2D2C2C] py-2 px-4
+           transition-colors duration-300
+           group-hover:bg-[#2D2C2C] group-hover:text-[#F7F709] group-hover:border-[#F7F709]"> About
+  </span> 
+ </a>
     </nav>
   </div>
 </div>
+
