--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,20 +1,30 @@
 ---
+import '../styles/tailwind.css';
+
 // Henter parametrene fra Astro.props
 const { htmlheading="h2", size="medium", font="sans", stylingclasses=""} = Astro.props; 
 const Htmlheading = htmlheading;
+
+
  
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-"large": "text-3xl lg:text-6xl",
-"medium": "text-2xl lg:text-3xl",
-"small": "text-xl",
+"large": "text-[64px] lg:text-[200px] text-[var(--bg-color)]",  //=h1
+"medium": "text-[40px] lg:text-[100px] text-[var(--color-light)]", //=h2
+"small_light": "text-[36px] lg:text-[80px] text-[var(--color-light)]", //=h3
+"small_dark": "text-[36px] lg:text-[80px] text-[var(--color-dark)]", //=h3
+"xsmall": "text-[20px] lg:text-[40px] text-[var(--accent-color)]",  //=h4
 };
+
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige skrifttyper.
 const fontClasses = {
-"display": "font-display",
-"sans": "font-sans",
-"serif": "font-serif",
+"h1": "font-display",
+"h2": "font-display",
+"h3_light": "font-display",
+"h3_dark": "font-display",
+"h4": "font-handwritten",
 };
 ---
 <Htmlheading class:list={[stylingclasses, sizeClasses[size], fontClasses[font]]}><slot /></Htmlheading>
+
