--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -15,12 +15,12 @@ const { title } = Astro.props;
 		<link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Over+the+Rainbow&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://use.typekit.net/nlg8xoh.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Lexend:wght@100..900&family=Over+the+Rainbow&display=swap" rel="stylesheet">
 
-		<script defer src="https://unpkg.com/tailwindcss-intersect@2.x.x/dist/observer.min.js"></script>
 	</head>
-	<body class="">
+	<body class="bg-[var(--bg-color)]">
 		
 		<Header></Header>
 		
