--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,14 +15,21 @@ import Button from "../components/Button.astro";
   >
   </section>
   <main class="">
-  <section class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 my-20">
+  <section class="relative my-20">
+    <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0">
     <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-5 col-span-4 text-center">What is it? </Heading>
     <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-4 col-span-6 -mt-4 lg:-mt-10">What is</Heading>
     <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-3 col-span-6 -mt-4 lg:-mt-10">Instant</Heading>
     <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-7 col-span-4 -mt-4 lg:-mt-10">Day?</Heading>
-    
     <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-3 col-span-2">Sooo....</Heading>
     <Text teksttype="Light" stylingclasses="col-start-3 col-span-8">October 18 is Instant Day - a day all about celebrating instant photography. So get out your Polaroid, Instax or whatever instant photography camera you are using, and show us your instants. Instant Day isn’t really a photo competition, it’s more a homage to good old analogue, instant photography - everybody who participates are winners:-) But: We do have a nice prize for one lucky instant photographer!</Text>
+    </div>
+
+    <img src="/images/scroll_1.png" alt="Billede 1" class="filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 absolute w-15 lg:w-45 -left-5 lg:-left-8 bottom-15 lg:bottom-20 rotate-20">
+    <img src="/images/scroll_13.jpg" alt="Billede 13" class="filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 absolute w-15 lg:w-45 left-115 lg:left-350 bottom-60 lg:bottom-90 -rotate-25">
+    
+    
+    
   </section>
   <section class="bg-[url(/images/share_y_instants_bg.webp)] bg-cover">
     <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 py-20">
@@ -49,30 +56,30 @@ import Button from "../components/Button.astro";
  <!-- Første scroll-galleri (venstre -> højre) -->
   <div class="col-span-12 mt-6 overflow-x-auto -mr-40 pb-10">
     <div class="flex gap-4 lg:gap-8 min-w-max mr-40 lg:mr-100">
-      <img src="/images/scroll_1.png" alt="Billede 1" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-       <img src="/images/scroll_8.png" alt="Billede 8" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_3.png" alt="Billede 3" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-        <img src="/images/scroll_9.png" alt="Billede 9" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_5.png" alt="Billede 5" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_11.png" alt="Billede 11" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_12.jpg" alt="Billede 12" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_13.jpg" alt="Billede 13" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_1.png" alt="Billede 1" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+       <img src="/images/scroll_8.png" alt="Billede 8" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_3.png" alt="Billede 3" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+        <img src="/images/scroll_9.png" alt="Billede 9" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_5.png" alt="Billede 5" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_11.png" alt="Billede 11" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_12.jpg" alt="Billede 12" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_13.jpg" alt="Billede 13" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
     </div>
   </div>
   <div class="grid grid-cols-12">
     <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-1 col-span-5 pl-8 pb-4">Scroll for more...</Heading>
   </div>
   <!-- Andet scroll-galleri (højre -> venstre forskudt) -->
-  <div class="col-span-12 mt-6 overflow-x-auto -ml-40 pt-8">
+  <div class="col-span-12 lg:mt-6 overflow-x-auto -ml-40 pt-8">
     <div class="flex gap-4 lg:gap-8 min-w-max justify-end ml-40 lg:ml-100">
-       <img src="/images/scroll_6.png" alt="Billede 6" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_4.png" alt="Billede 4" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_7.png" alt="Billede 7" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-       <img src="/images/scroll_2.png" alt="Billede 2" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_10.png" alt="Billede 10" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_14.jpg" alt="Billede 14" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_15.jpg" alt="Billede 15" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
-      <img src="/images/scroll_16.jpg" alt="Billede 16" class="w-44 h-40 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+       <img src="/images/scroll_6.png" alt="Billede 6" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_4.png" alt="Billede 4" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_7.png" alt="Billede 7" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+       <img src="/images/scroll_2.png" alt="Billede 2" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_10.png" alt="Billede 10" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_14.jpg" alt="Billede 14" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_15.jpg" alt="Billede 15" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
+      <img src="/images/scroll_16.jpg" alt="Billede 16" class="w-24 h-30 lg:w-64 lg:h-60 rounded-2xl flex-shrink-0 object-cover filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110">
     </div>
   </div>
 </section>
@@ -164,8 +171,8 @@ import Button from "../components/Button.astro";
       }
     }
   }
-</script>
-  </main>
+  </script>
+  
 
 
 </MainLayout>
