indsat indhold til winner_and_nominees

--- a/src/components/Text.astro
+++ b/src/components/Text.astro
@@ -6,6 +6,7 @@ const { teksttype="brødtekst", stylingclasses=""} = Astro.props;
 const sizeClasses = {
   "Light": "font-paragraph text-[var(--color-light)] text-[12px] lg:text-[20px]",
   "Dark": "font-paragraph text-[var(--color-dark)] text-[12px] lg:text-[20px]",
+  "Nominees": "font-paragraph text-[var(--color-light)] text-[9px] lg:text-[15px]",
 };
 
 
