Tilrettet footeren en smule ift. størrelse og tilføjet hover

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -14,6 +14,7 @@ const sizeClasses = {
 "small_light": "text-[36px] lg:text-[80px] text-[var(--color-light)]", //=h3
 "small_dark": "text-[36px] lg:text-[80px] text-[var(--color-dark)]", //=h3
 "xsmall": "text-[20px] lg:text-[40px] text-[var(--accent-color)]",  //=h4
+"xxsmall": "text-[20px] lg:text-[30px] text-[var(--accent-color)]",  //=h4
 };
 
 
