--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,23 @@ import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
 ---
 <MainLayout title="Titel">
+    <!-- Noise overlay -->
+  <div 
+  class="pointer-events-none fixed inset-0 z-[9999] mix-blend-multiply opacity-100"
+  style="
+    background-image: url('/images/noise.png'); 
+    background-repeat: repeat; 
+    background-size: 300px 300px; 
+    image-rendering: pixelated;
+  ">
+</div>
+
   <!-- Hero Section -->
   <section 
     class="relative w-full h-[70vh] md:h-screen bg-cover bg-center flex flex-col items-center justify-center"
     style="background-image: url('/images/hero_img.png');"
   >
   </section>
-  <main class="">
   <section class="relative my-20">
     <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0">
     <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-5 col-span-4 text-center">What is it? </Heading>
@@ -37,14 +47,15 @@ import Button from "../components/Button.astro";
       <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-6 col-span-6 -mt-6">instants!</Heading>
       <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-3 col-span-5 mt-10">How to participate? </Heading>
       <Text teksttype="Light" stylingclasses="col-start-3 col-span-9 pt-2 pb-7">So: Got an instant photo ready for the public? In order to take part in Instant Day: </Text>
-  <Text teksttype="Light" stylingclasses="col-start-3 col-span-9 py-3">
-  <ol class="list-decimal list-inside space-y-2">
-    <li>Take a photo of your instant with your smartphone (or scan it for max. quality) - the file should be between 2 - 10 MB, in jpg/jpeg or webp format.</li>
-    <li>Upload your photo and credentials on [link til din “share your instants” side]</li>
-    <li>Agree to our terms and conditions [link til din “terms and conditions” sektion på “share your instants” siden]...</li>
-    <li>You can make up to 5 submissions - go through step 1-3 for each submission ;-)</li>
-  </ol>
-</Text>
+      <Text teksttype="Light" stylingclasses="col-start-3 col-span-9 py-3">
+      <ol class="list-decimal list-inside space-y-2">
+        <li>Take a photo of your instant with your smartphone (or scan it for max. quality) - the file should be between 2 - 10 MB, in jpg/jpeg or webp format.</li>
+        <li>Upload your photo and credentials on [link til din “share your instants” side]</li>
+        <li>Agree to our terms and conditions [link til din “terms and conditions” sektion på “share your instants” siden]...</li>
+        <li>You can make up to 5 submissions - go through step 1-3 for each submission ;-)</li>
+      </ol>
+      </Text>
+  </div>
 </section>
 
 <section class="my-30">
@@ -123,7 +134,7 @@ import Button from "../components/Button.astro";
   </div>
 </section>
 
-<section class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 pt-20 items-center gap-4">
+<section class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 pb-20 lg:pb-30 pt-20 items-center gap-4">
   <img 
     src="/images/coming_soon.png" 
     alt="Instant pic" 
