--- a/src/pages/winners.astro
+++ b/src/pages/winners.astro
@@ -8,6 +8,16 @@ import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
 ---
 <MainLayout title="Titel">
+      <!-- Noise overlay -->
+  <div 
+  class="pointer-events-none fixed inset-0 z-[9999] mix-blend-multiply opacity-100"
+  style="
+    background-image: url('/images/noise.png'); 
+    background-repeat: repeat; 
+    background-size: 300px 300px; 
+    image-rendering: pixelated;
+  ">
+</div>
     <section class="py-30">
     <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0" >
      <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-4 col-span-8 -mt-4 lg:-mt-10">Winners &</Heading>
