--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -15,6 +15,8 @@ const sizeClasses = {
 "small_dark": "text-[36px] lg:text-[80px] text-[var(--color-dark)]", //=h3
 "xsmall": "text-[20px] lg:text-[40px] text-[var(--accent-color)]",  //=h4
 "xxsmall": "text-[20px] lg:text-[30px] text-[var(--accent-color)]",  //=h4
+"3x-small": "text-[15px] lg:text-[20px] text-[var(--color-dark)]",  //=h2
+
 };
 
 
