--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,27 @@ import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
 ---
 <MainLayout title="Titel">
-  <!-- Hero Section -->
-  <section 
-    class="relative w-full h-[70vh] md:h-screen bg-cover bg-center flex flex-col items-center justify-center"
-    style="background-image: url('/images/hero_img.png');"
-  >
-  </section>
+<!-- Hero Section -->
+<section class="relative w-full h-[40vh] lg:h-screen overflow-hidden">
+
+  <!-- Video baggrund (kun desktop) -->
+  <video 
+    autoplay 
+    loop 
+    muted 
+    playsinline 
+    class="hidden lg:block absolute top-0 left-0 w-full h-full object-cover">
+    <source src="/videos/hero_video.mp4" type="video/mp4" />
+  </video>
+
+  <!-- Statisk billede (kun mobil) -->
+  <img 
+    src="/images/hero_img.webp" 
+    alt="Hero background" 
+    class="block md:hidden absolute top-0 left-0 w-full h-full object-cover" />
+</section>
+
+
   <main class="">
   <section class="relative my-20">
     <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0">
