--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@
   <!-- Desktop Menu (right side, separate buttons) -->
 <nav class="hidden lg:flex flex-col gap-35 fixed right-4 top-1/8 items-center z-50"
      style="font-family: 'Bowlby One SC', sans-serif;">
-  <a href="#im_in" 
+  <a href="/" 
      class="bg-[#E9F422] text-black px-4 py-2 rounded-full font-bold rotate-90 
             hover:bg-gray-800 hover:text-[#E9F422] transition-colors duration-300">
     I'm in
