tilføjet terms.astro og tilrettet billederne

--- a/src/pages/winners.astro
+++ b/src/pages/winners.astro
@@ -18,7 +18,7 @@ import Button from "../components/Button.astro";
     image-rendering: pixelated;
   ">
 </div>
-    <section class="py-30">
+    <section class="py-30 overflow-hidden relative">
     <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0" >
      <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-4 col-span-8 -mt-4 lg:-mt-10">Winners &</Heading>
     <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-2 col-span-5 -mt-2 lg:-mt-8">Are you excited?</Heading>
@@ -26,7 +26,8 @@ import Button from "../components/Button.astro";
     <Text teksttype="Light" stylingclasses="col-start-3 col-span-8 pt-10">Instant Day was quite a success with more than [] contributions. So it was difficult to find a winner. After a couple of long but exciting days, the judges agreed on the winner and the [] nominees.
     </Text>
     </div>
-    
+    <img src="/images/scroll_3.png" alt="Billede 3" class="filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 absolute w-15 lg:w-45 -left-5 lg:-left-10 bottom-40 lg:bottom-100 rotate-20">
+    <img src="/images/scroll_7.png" alt="Billede 7" class="filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 absolute w-15 lg:w-45 left-115 lg:left-350 bottom-90 lg:bottom-80 -rotate-20">
     </section>
      <section class="bg-[url(/images/winner_bg.png)] bg-cover relative">
         <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 py-20">
