--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,14 +1,13 @@
 ---
 // Henter parametrene fra Astro.props
-const { variant= "primary", size = "medium" } = Astro.props; 
+const { variant= "primary", size = "small" } = Astro.props; 
  
 //Definer den styling (Tailwind classes, der gør sig gældende for alle knapper)
-const buttonStyling = "border-2 px-16 py-4"; 
+const buttonStyling = "rounded-full px-4 py-2 lg:px-8 lg:py-4 lg:text-xl font-display transition-all duration-300"; 
  
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige varianter 
 const variantClasses = {
-"primary": "border-black hover:bg-black hover:text-white hover:-skew-x-12 transition-all duration-700", /* border-primary-500 */
-"secondary": "border-blue-500 hover:bg-blue-500 hover:border-blue-200" /* border-secondary-500 */
+"primary": "bg-[#e9f422] text-[#2D2C2C] border-2 border-[#e9f422] hover:bg-[#2D2C2C] hover:text-[#e9f422]", /* border-primary-500 */
 };
  
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskelligeog størrelser.
@@ -19,4 +18,8 @@ const sizeClasses = {
 };
 ---
 <!--Sæt classes for den pågældende knap sammen ved hjælp af Astros class:list -->
-<button class:list={[buttonStyling, variantClasses[variant], sizeClasses[size]]}><slot /></button>
+<div class="flex justify-center pt-10">
+  <button class:list={[buttonStyling, variantClasses[variant], sizeClasses[size]]}>
+    <slot />
+  </button>
+</div>
