Tilføjet animationer og tilrettet header-knapper

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import Button from "../components/Button.astro";
        class="absolute w-36 lg:w-60 right-[-80px] bottom-40 -rotate-12 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 intersect:animate-fade-left intersect:duration-3000">
 
   </section>
-  <section class="bg-[url(/images/share_y_instants_bg.webp)] bg-cover intersect:animate-fade-right intersect:duration-3000">
+  <section id="share_y_instant" class="bg-[url(/images/share_y_instants_bg.webp)] bg-cover intersect:animate-fade-right intersect:duration-3000">
     <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 py-20">
       <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-3 col-span-7 intersect:animate-fade-up intersect:duration-3000">Share your</Heading>
       <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-6 col-span-6 -mt-6 intersect:animate-fade-down intersect:duration-3000">instants!</Heading>
