--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,24 +14,25 @@
   <!-- Desktop Menu (right side, separate buttons) -->
 <nav class="hidden lg:flex flex-col gap-35 fixed right-4 top-1/8 items-center z-50"
      style="font-family: 'Bowlby One SC', sans-serif;">
-  <a href="/" 
-     class="bg-[#E9F422] text-black px-4 py-2 rounded-full font-bold rotate-90 
-            hover:bg-gray-800 hover:text-[#E9F422] transition-colors duration-300">
+  <a href="/#share_y_instant" 
+     class="bg-[#E9F422] border-1 border-[#E9F422] text-[#2e2d2d] px-4 py-2 rounded-full font-bold rotate-90 
+            hover:bg-[#2e2d2d] hover:border-[#E9F422] hover:text-[#E9F422] transition-colors duration-300">
     I'm in
   </a>
+
   <a href="/why" 
-     class="bg-[#E9F422] text-black px-4 py-2 rounded-full font-bold rotate-90 
-            hover:bg-gray-800 hover:text-[#E9F422] transition-colors duration-300">
+     class="bg-[#E9F422] border-1 border-[#E9F422] text-[#2e2d2d] px-4 py-2 rounded-full font-bold rotate-90 
+           hover:bg-[#2e2d2d] hover:border-[#E9F422] hover:text-[#E9F422] transition-colors duration-300">
     Why instants
   </a>
   <a href="/winners" 
-     class="bg-[#E9F422] text-black px-4 py-2 rounded-full font-bold rotate-90 
-            hover:bg-gray-800 hover:text-[#E9F422] transition-colors duration-300">
+     class="bg-[#E9F422] border-1 border-[#E9F422] text-[#2e2d2d] px-4 py-2 rounded-full font-bold rotate-90 
+           hover:bg-[#2e2d2d] hover:border-[#E9F422] hover:text-[#E9F422] transition-colors duration-300">
     Winners
   </a>
   <a href="/about" 
-     class="bg-[#E9F422] text-black px-4 py-2 rounded-full font-bold rotate-90 
-            hover:bg-gray-800 hover:text-[#E9F422] transition-colors duration-300">
+     class="bg-[#E9F422] border-1 border-[#E9F422] text-[#2e2d2d] px-4 py-2 rounded-full font-bold rotate-90 
+           hover:bg-[#2e2d2d] hover:border-[#E9F422] hover:text-[#E9F422] transition-colors duration-300">
     About
   </a>
 </nav>
