--- a/src/pages/winners.astro
+++ b/src/pages/winners.astro
@@ -20,10 +20,10 @@ import Button from "../components/Button.astro";
 </div>
     <section class="py-30 overflow-hidden relative">
     <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0" >
-     <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-4 col-span-8 -mt-4 lg:-mt-10">Winners &</Heading>
-    <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-2 col-span-5 -mt-2 lg:-mt-8">Are you excited?</Heading>
-    <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-3 col-span-7 -mt-2 lg:-mt-6">Nominees</Heading>
-    <Text teksttype="Light" stylingclasses="col-start-3 col-span-8 pt-10">Instant Day was quite a success with more than [] contributions. So it was difficult to find a winner. After a couple of long but exciting days, the judges agreed on the winner and the [] nominees.
+     <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-4 col-span-8 -mt-4 lg:-mt-10 intersect:animate-fade-left intersect:duration-3000">Winners &</Heading>
+    <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-2 col-span-5 -mt-2 lg:-mt-8 intersect:animate-fade-down intersect:duration-3000">Are you excited?</Heading>
+    <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-3 col-span-7 -mt-2 lg:-mt-6 intersect:animate-fade-right intersect:duration-3000">Nominees</Heading>
+    <Text teksttype="Light" stylingclasses="col-start-3 col-span-8 pt-10 intersect:animate-fade-up intersect:duration-3000">Instant Day was quite a success with more than [] contributions. So it was difficult to find a winner. After a couple of long but exciting days, the judges agreed on the winner and the [] nominees.
     </Text>
     </div>
     <img src="/images/scroll_3.png" alt="Billede 3" class="filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 absolute w-15 lg:w-45 -left-5 lg:-left-10 bottom-40 lg:bottom-100 rotate-20">
@@ -31,7 +31,7 @@ import Button from "../components/Button.astro";
     </section>
      <section class="bg-[url(/images/winner_bg.png)] bg-cover relative">
         <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 py-20">
-           <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-4 col-span-8">The winner</Heading>
+           <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-4 col-span-8 intersect:animate-fade-left intersect:duration-4000">The winner</Heading>
            <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-8 col-span-3 -mt-2 lg:-mt-5">of 2025!</Heading>
            <img src="/images/winner_img.png" alt="winner_instant" class="z-20 pt-8 lg:pt-15 col-start-2 col-span-7 w-full max-w-full h-auto filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110"
   >
@@ -44,10 +44,10 @@ import Button from "../components/Button.astro";
   <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-4 col-span-8">
     It was hard to choose but...
   </Heading>
-  <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-2 col-span-11">
+  <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-2 col-span-11 intersect:animate-jump-in intersect:duration-4000">
     here are the Best
   </Heading>
-  <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-2 col-span-11 -mt-3 lg:-mt-8">
+  <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-2 col-span-11 -mt-3 lg:-mt-8 intersect:animate-jump intersect:duration-6000">
     of 2025 - nominees:
   </Heading>
 
@@ -55,7 +55,7 @@ import Button from "../components/Button.astro";
   <div class="group [perspective:1000px] col-start-3 col-span-3 lg:col-start-2 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
       <!-- Forside -->
-      <div class="absolute inset-0 [backface-visibility:hidden]">
+      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-left intersect:duration-3000">
         <img src="/images/nominees_1.jpg" alt="nominee 1"
           class="w-full h-full object-cover pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 -rotate-6">
       </div>
@@ -70,7 +70,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-8 col-span-3 lg:col-start-6 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden]">
+      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-left intersect:duration-3000">
         <img src="/images/nominees_2.jpg" alt="nominee 2"
           class="w-full h-full object-cove pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 rotate-8">
       </div>
@@ -83,7 +83,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-3 col-span-3 lg:col-start-10 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden]">
+      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-left intersect:duration-3000">
         <img src="/images/nominees_3.jpg" alt="nominee 3"
           class="w-full h-full object-cover pt-10 lg:pt-25 grayscale hover:grayscale-0 transition duration-300 hover:scale-110 -rotate-10">
       </div>
@@ -96,7 +96,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-8 col-span-3 lg:col-start-2 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden]">
+      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-right intersect:duration-3000">
         <img src="/images/nominees_4.jpg" alt="nominee 4"
           class="w-full h-full object-cover pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 rotate-10">
       </div>
@@ -109,7 +109,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-3 col-span-3 lg:col-start-6 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden]">
+      <div class="absolute inset-0 [backface-visibility:hidden intersect:animate-fade-right intersect:duration-3000">
         <img src="/images/nominees_5.jpg" alt="nominee 5"
           class="w-full h-full object-cover pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 -rotate-3">
       </div>
@@ -122,7 +122,7 @@ import Button from "../components/Button.astro";
 
   <div class="group [perspective:1000px] col-start-8 col-span-3 lg:col-start-10 lg:col-span-3 cursor-pointer">
     <div class="relative w-full aspect-[3/4] transition-transform duration-700 [transform-style:preserve-3d] group-[.flipped]:[transform:rotateY(180deg)]">
-      <div class="absolute inset-0 [backface-visibility:hidden]">
+      <div class="absolute inset-0 [backface-visibility:hidden] intersect:animate-fade-right intersect:duration-3000">
         <img src="/images/nominees_6.png" alt="nominee 6"
           class="w-full h-full object-cover pt-10 lg:pt-25 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 rotate-8">
       </div>
