buttons og links done

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -3,7 +3,7 @@
 const { variant= "primary", size = "small" } = Astro.props; 
  
 //Definer den styling (Tailwind classes, der gør sig gældende for alle knapper)
-const buttonStyling = "rounded-full px-4 py-2 lg:px-8 lg:py-4 lg:text-xl font-display transition-all duration-300"; 
+const buttonStyling = "rounded-full px-4 py-2 lg:px-8 lg:py-4 lg:text-2xl font-display transition-all duration-300"; 
  
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige varianter 
 const variantClasses = {
