--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import Heading from "../components/Heading.astro";
 <a href="/why" class="text-[#2D2C2C] pb-5 text-sm  lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">Why instants</a>
 <a href="/winners" class="text-[#2D2C2C] pb-5 text-sm lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">Winners</a>
 <a href="/about" class="text-[#2D2C2C] pb-5 text-sm  lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">About</a>
-<a href="/" class="text-[#2D2C2C] pb-5 text-sm lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">Terms & conditions</a>
+<a href="/terms" class="text-[#2D2C2C] pb-5 text-sm lg:text-2xl hover:text-[#e9f422]" style="font-family: 'Bowlby One SC', sans-serif;">Terms & conditions</a>
 </section> 
 
 <div class="text-center mt-10 px-2 lg:mt-10 lg:px-10 grid grid-cols-12">
