--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,10 +48,13 @@ import Button from "../components/Button.astro";
     <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-3 col-span-2">Sooo....</Heading>
     <Text teksttype="Light" stylingclasses="col-start-3 col-span-8">October 18 is Instant Day - a day all about celebrating instant photography. So get out your Polaroid, Instax or whatever instant photography camera you are using, and show us your instants. Instant Day isn’t really a photo competition, it’s more a homage to good old analogue, instant photography - everybody who participates are winners:-) But: We do have a nice prize for one lucky instant photographer!</Text>
     </div>
-    <!-- knap der scroller ned til sektionen "coming soon" -->
-    <a href="#countdown">
-  <Button>save the date</Button>
+    <!-- knap der linker til google calender -->
+    <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Instant+Day&dates=20251018/20251019&details=Kom+og+vær+med!&location=København" 
+  target="_blank" 
+  rel="noopener noreferrer"
+><Button>Save the Date</Button>
 </a>
+
     <img src="/images/scroll_1.png" alt="Billede 1" 
        class="absolute w-36 lg:w-60 -left-20 bottom-20 rotate-12 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 intersect:animate-fade-right intersect:duration-3000">
     <img src="/images/scroll_13.jpg" alt="Billede 13" 
@@ -216,6 +219,10 @@ import Button from "../components/Button.astro";
       <div class="uppercase text-[12px] lg:text-[22px] font-display text-[var(--color-light)] pt-2">Seconds</div>
     </div>
   </div>
+  <!-- knap "tell a friend" -->
+    <a href="https://fb.me/1PwlHRdLclMLeRo" target="_blank">
+  <Button>tell a friend</Button>
+</a>
 </section>
 
 <section class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 pb-20 lg:pb-30 pt-20 items-center gap-4">
